objects/FINS_Distributed_Marketing_Template__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Footer_Image_URL__c</fullName>
        <label>Footer Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Image_URL__c</fullName>
        <label>Header Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lending</fullName>
                </value>
                <value>
                    <fullName>Retail Banking</fullName>
                </value>
                <value>
                    <fullName>Wealth Management</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Commercial Banking</fullName>
                </value>
                <value>
                    <fullName>Asset Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Logo_URL__c</fullName>
        <description>URL Path to Logo File</description>
        <label>Logo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Description__c</fullName>
        <label>Primary Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Primary_Header__c</fullName>
        <description>Heading text shown right below the Header Image</description>
        <label>Primary Header Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Distributed Marketing Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Industry__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Distributed Marketing Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distributed Marketing Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>